streamit application running successfully

--- a/RAG_Medical_Copilot.ipynb
+++ b/RAG_Medical_Copilot.ipynb
@@ -2,13 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "60fc1278-6831-40ae-a705-59bea3c83a1b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"REDACTEDproj-sgRbY5gLQ7MLNRdyk44_gOHJ2JXXx4curgglvhI1vSTRqjVqHNrsesR5vpxu5gRsv6PGB-IDM5T3BlbkFJSSDwEtP8nm-HHpKqoqiA2Njs0MCh8AEYRd4Fl4qrIzVnkZ6aFxJ_3i2Q6_AI37zzTTynuE9moA\""
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()"
    ]
   },
   {
