--- a/RAG_Medical_Copilot.ipynb
+++ b/RAG_Medical_Copilot.ipynb
@@ -625,6 +625,36 @@
     "plt.title(\"Distribution of RAG Quality Scores\")\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae81f83a-fdc3-4647-bcb6-c08d47b0b587",
+   "metadata": {},
+   "source": [
+    "## Hybrid RAG Extension — OCR + E5 + Chroma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9c26b3eb-5c2f-4251-adb5-baa4eff026a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "streamlit 1.28.0 requires protobuf<5,>=3.20, but you have protobuf 6.32.1 which is incompatible.\n",
+      "grpcio-status 1.71.0 requires protobuf<6.0dev,>=5.26.1, but you have protobuf 6.32.1 which is incompatible.\u001b[0m\u001b[31m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Run once; ignore \"already satisfied\" messages.\n",
+    "%pip install --quiet paddleocr \"paddlepaddle==2.6.1\" chromadb sentence-transformers pymupdf langchain pillow numpy\n"
+   ]
   }
  ],
  "metadata": {
